--- a/css/nullstyle.css
+++ b/css/nullstyle.css
@@ -24,6 +24,10 @@ h1 {
   font-size: 2em;
 }
 
+ul {
+  list-style: none;
+}
+
 hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -39,6 +43,11 @@ pre {
 a {
   background-color: transparent;
   text-decoration: none;
+  color: #000;
+}
+
+a:visited {
+  color: inherit;
 }
 
 abbr[title] {
@@ -92,6 +101,7 @@ textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
+  color: inherit;
 }
 
 button,
@@ -142,20 +152,6 @@ progress {
 
 textarea {
   overflow: auto;
-}
-
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type=search] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
 }
 
 [type=search]::-webkit-search-decoration,
