--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ h1 {
   font-size: 2em;
 }
 
+ul {
+  list-style: none;
+}
+
 hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -39,6 +43,11 @@ pre {
 a {
   background-color: transparent;
   text-decoration: none;
+  color: #000;
+}
+
+a:visited {
+  color: inherit;
 }
 
 abbr[title] {
@@ -92,6 +101,7 @@ textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
+  color: inherit;
 }
 
 button,
@@ -144,20 +154,6 @@ textarea {
   overflow: auto;
 }
 
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type=search] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
 [type=search]::-webkit-search-decoration,
 [type=search]::-webkit-search-cancel-button,
 [type=search]::-webkit-search-results-button,
@@ -190,4 +186,258 @@ template {
   [type=search] {
     outline-offset: -2px;
   }
+}
+body {
+  font-family: "Roboto", sans-serif;
+  color: #000;
+}
+body .logo {
+  background-color: #f7f7f7;
+  text-align: center;
+  font-family: "Shrikhand", cursive;
+  padding: 15px 0;
+}
+
+[type=search] {
+  outline-offset: 0;
+  outline-color: #9356DC;
+  font-weight: 600;
+}
+[type=search]:hover {
+  outline-color: #9356DC;
+}
+
+.search {
+  text-align: center;
+  height: 50px;
+  background-color: #f2f2f2;
+  -webkit-box-shadow: inset 0 3px 5px #b3b3b3;
+          box-shadow: inset 0 3px 5px #b3b3b3;
+}
+.search form {
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 30px;
+  padding: 0 10px;
+  border-radius: 20px;
+  -webkit-transform: translate(-50%, -40%);
+          transform: translate(-50%, -40%);
+  top: 50%;
+  left: 50%;
+  border-radius: 20px;
+  pointer-events: none;
+  -webkit-transition: -webkit-box-shadow 0.5s ease-in-out;
+  transition: -webkit-box-shadow 0.5s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out, -webkit-box-shadow 0.5s ease-in-out;
+}
+.search form:focus-within {
+  -webkit-box-shadow: inset 0 5px 7px #b3b3b3;
+          box-shadow: inset 0 5px 7px #b3b3b3;
+}
+.search i {
+  margin-right: 10px;
+}
+.search input {
+  background-color: transparent;
+  width: 165px;
+  height: 30px;
+  border-radius: 20px;
+  padding: 0 15px;
+  pointer-events: auto;
+}
+.search input::-webkit-input-placeholder {
+  color: #000;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.search input::-moz-placeholder {
+  color: #000;
+  opacity: 1;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.search input:-ms-input-placeholder {
+  color: #000;
+  opacity: 1;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.search input::-ms-input-placeholder {
+  color: #000;
+  opacity: 1;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.search input::placeholder {
+  color: #000;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.search input:focus {
+  outline: none;
+}
+.search input:focus::-webkit-input-placeholder {
+  color: #999999;
+}
+.search input:focus::-moz-placeholder {
+  color: #999999;
+}
+.search input:focus:-ms-input-placeholder {
+  color: #999999;
+}
+.search input:focus::-ms-input-placeholder {
+  color: #999999;
+}
+.search input:focus::placeholder {
+  color: #999999;
+}
+
+.reservation {
+  text-align: center;
+  padding: 3rem 1rem;
+  margin: auto;
+  background-color: #f7f7f7;
+}
+.reservation .title {
+  padding: 0 3rem;
+}
+.reservation .texte {
+  padding: 1rem 1rem 2rem 1rem;
+}
+
+.texte {
+  font-size: 20px;
+}
+
+.title {
+  font-size: 25px;
+  padding-bottom: 1rem;
+}
+
+button {
+  border-radius: 25px;
+  height: 50px;
+  padding: 0 26px;
+  color: #fff;
+  cursor: pointer;
+  background: linear-gradient(356deg, #9356DC, #FF79DA);
+}
+
+.functionnality {
+  padding: 3rem 1.5rem 3rem 2.3rem;
+}
+.functionnality h3 {
+  margin-left: -0.8rem;
+}
+.functionnality button {
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 500;
+  height: 80px;
+  margin: 1rem 0;
+  color: #000;
+  background: #f9f9f9;
+}
+.functionnality button div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.functionnality button span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  background-color: #9356DC;
+  border-radius: 50%;
+  height: 26px;
+  aspect-ratio: 1;
+  position: absolute;
+  left: -13px;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+.functionnality button i {
+  color: #737373;
+  padding-right: 20px;
+}
+
+.restaurants {
+  background-color: #f7f7f7;
+  padding: 3rem 1.5rem;
+}
+.restaurants .card-container {
+  position: relative;
+  border-radius: 15px;
+  padding: 1rem 0;
+  height: 330px;
+}
+.restaurants .card-container .new {
+  position: absolute;
+  background-color: #99E2D0;
+  color: #278870;
+  font-weight: 500;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  padding: 0.5rem 1rem;
+  border-radius: 3px;
+  right: 15px;
+  top: 30px;
+}
+.restaurants .card-container img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  width: 100%;
+  height: 70%;
+  border-radius: 15px 15px 0 0;
+}
+.restaurants .card-container .card-info {
+  background-color: #fff;
+  height: 30%;
+  border-radius: 0 0 15px 15px;
+}
+.restaurants .card-container i {
+  position: absolute;
+  right: 30px;
+}
+
+footer {
+  background-color: #404040;
+  color: #fff;
+  padding: 0 1.7rem 3rem 1.7rem;
+  font-size: 20px;
+}
+footer .logo-footer {
+  font-family: "Shrikhand", cursive;
+  padding: 1.5rem 0;
+}
+footer li {
+  padding: 0.3rem 0;
+  font-size: 18px;
+}
+footer i {
+  width: 25px;
 }
