--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,231 @@
-@import "nullstyle.scss";
+// Reset Style
+@use "nullstyle";
+
+//Variables
+$colors: (
+    primary: #9356DC,
+    secondary: #FF79DA,
+    tertiary: #99E2D0,
+    white: #fff,
+    black: #000
+);
+
+$fonts-size: (
+    title: 25px,
+    texte: 20px,
+    texte-sm: 18px
+);
+
+//Mixins
+@mixin firefox-only {
+    @at-root {
+      @-moz-document url-prefix() {
+        & {
+          @content;
+        }
+      }
+    }
+  }
+@mixin flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+//Functions
+@function color($color-name) {
+    @return map-get($colors, $color-name)
+};
+@function fontz($font-size) {
+    @return map-get($fonts-size, $font-size)
+};
+@function gray($amount) {
+    @return darken(#fff, $amount)
+};
+
+
+// General and Logo
+body {
+    font-family: 'Roboto', sans-serif;
+    color: color(black);
+    .logo {
+        background-color: gray(3);
+        text-align: center;
+        font-family: 'Shrikhand', cursive;
+        padding: 15px 0;
+    }
+}
+
+//Localisation
+[type="search"] {
+    outline-offset: 0;
+    outline-color: color(primary);
+    font-weight: 600;
+    &:hover {
+        outline-color: color(primary);
+    }
+}
+.search {
+    text-align: center;
+    height: 50px;
+    background-color: gray(5);
+    box-shadow: inset 0 3px 5px gray(30);
+    form {
+        position: relative;
+        width: fit-content;
+        height: 30px;
+        padding: 0 10px;
+        border-radius: 20px;
+        transform: translate(-50%, -40%);
+        top: 50%;
+        left: 50%;
+        border-radius: 20px;
+        pointer-events: none;
+        transition: box-shadow 0.5s ease-in-out;
+        &:focus-within {
+                box-shadow: inset 0 5px 7px gray(30);
+            }
+        }
+        i {
+            margin-right: 10px;
+        }
+        input {
+            background-color: transparent;
+            width: 165px;
+            height: 30px;
+            border-radius: 20px;
+            padding: 0 15px;
+            pointer-events: auto;
+            &::placeholder {
+                color: #000;
+                opacity: 1;
+                transition: all 0.5s ease-in-out;
+            }
+            &:focus {
+                outline: none;
+                &::placeholder {
+                    color: gray(40);
+                }
+                    }
+            }
+        }
+
+.reservation {
+    text-align: center;
+    padding: 3rem 1rem;
+    margin: auto;
+    background-color: gray(3);
+    .title {
+        padding: 0 3rem;
+    }
+    .texte {
+        padding: 1rem 1rem 2rem 1rem;
+    }
+}
+.texte {
+    font-size: fontz(texte);
+}
+.title {
+    font-size: fontz(title);
+    padding-bottom: 1rem;
+}
+button {
+    border-radius: 25px;
+    height: 50px;
+    padding: 0 26px;
+    color: #fff;
+    cursor: pointer;
+    background: linear-gradient(356deg, color(primary), color(secondary) );
+}
+.functionnality {
+    padding: 3rem 1.5rem 3rem 2.3rem;
+    h3 {
+        margin-left: -0.8rem;
+    }
+    button {
+        position: relative;
+        width: 100%;
+        font-size: fontz(texte-sm);
+        font-weight: 500;
+        height: 80px;
+        margin: 1rem 0 ;
+        color: #000;
+        background: gray(2.5);
+        div {
+            @include flex-center();
+        }
+        span {
+            @include flex-center();
+            color: #fff;
+            background-color: color(primary);
+            border-radius: 50%;
+            height: 26px;
+            aspect-ratio: 1;
+            position: absolute;
+            left: -13px;
+            top: 50%;
+            transform: translate(0, -50%);
+        }
+        i {
+            color: gray(55);
+            padding-right: 20px;
+        }
+    }
+}
+.restaurants {
+    background-color: gray(3);
+    padding: 3rem 1.5rem;
+    .card-container {
+        position: relative;
+        border-radius: 15px;
+        padding: 1rem 0;
+        height: 330px;
+        .new {
+            position: absolute;
+            background-color: color(tertiary);
+            color: darken(color(tertiary), 40);
+            font-weight: 500;
+            user-select: none;
+            padding: 0.5rem 1rem;
+            border-radius: 3px;
+            right: 15px;
+            top: 30px;
+        }
+        img {
+            object-fit: cover;
+            object-position: center;
+            width: 100%;
+            height: 70%;
+            border-radius: 15px 15px 0 0;
+
+        }
+        .card-info {
+            background-color: #fff;
+            height: 30%;
+            border-radius: 0 0 15px 15px;
+        }
+        i {
+            position: absolute;
+            right: 30px;
+        }
+    }
+}
+footer {
+    background-color: gray(75);
+    color: #fff;
+    padding: 0 1.7rem 3rem 1.7rem;
+    font-size: fontz(texte);
+    .logo-footer {
+        font-family: 'Shrikhand', cursive;
+        padding: 1.5rem 0;
+    }
+    li {
+        padding: 0.3rem 0;
+        font-size: fontz(texte-sm);
+    }
+    i {
+        width: 25px;
+    }
+}
