--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,9 +11,10 @@ $colors: (
 );
 
 $fonts-size: (
-    title: 25px,
-    texte: 20px,
-    texte-sm: 18px
+    title: 24px,
+    text-lg: 18px,
+    text-m: 16px,
+    text-sm: 15px
 );
 
 //Mixins
@@ -30,6 +31,9 @@ $fonts-size: (
     display: flex;
     align-items: center;
     justify-content: center;
+}
+@mixin shadow($amount: 0.23) {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, $amount);
 }
 
 
@@ -50,11 +54,13 @@ $fonts-size: (
 body {
     font-family: 'Roboto', sans-serif;
     color: color(black);
+    header {
+        @include flex-center();
+        height: 62px;
+    }
     .logo {
-        background-color: gray(3);
-        text-align: center;
-        font-family: 'Shrikhand', cursive;
-        padding: 15px 0;
+        scale: 0.84;
+        padding-top: 9px;
     }
 }
 
@@ -70,15 +76,15 @@ body {
 .search {
     text-align: center;
     height: 50px;
-    background-color: gray(5);
-    box-shadow: inset 0 3px 5px gray(30);
+    background-color: gray(8.5);
+    box-shadow: inset 0 3px 5px rgba(gray(30), 0.5);
     form {
         position: relative;
         width: fit-content;
         height: 30px;
         padding: 0 10px;
         border-radius: 20px;
-        transform: translate(-50%, -40%);
+        transform: translate(-50%, -50%);
         top: 50%;
         left: 50%;
         border-radius: 20px;
@@ -89,17 +95,18 @@ body {
             }
         }
         i {
-            margin-right: 10px;
+
         }
         input {
             background-color: transparent;
-            width: 165px;
+            width: 158px;
             height: 30px;
             border-radius: 20px;
-            padding: 0 15px;
+            padding: 0 18px;
             pointer-events: auto;
             &::placeholder {
                 color: #000;
+                font-weight: 500;
                 opacity: 1;
                 transition: all 0.5s ease-in-out;
             }
@@ -114,118 +121,183 @@ body {
 
 .reservation {
     text-align: center;
-    padding: 3rem 1rem;
+    padding: 2.5rem 1rem 3.6rem 1rem;
     margin: auto;
     background-color: gray(3);
     .title {
         padding: 0 3rem;
     }
-    .texte {
-        padding: 1rem 1rem 2rem 1rem;
+    .text {
+        padding: 0.9rem 1rem 1.9rem 1rem;
+        font-size: fontz(text-lg);
+    }
+    .button {
+        @include shadow();
     }
 }
-.texte {
-    font-size: fontz(texte);
+.text {
+    font-size: fontz(text);
+    font-weight: 300;
 }
 .title {
     font-size: fontz(title);
-    padding-bottom: 1rem;
+    font-weight: 600;
+    padding-bottom: 0.4rem;
 }
 button {
     border-radius: 25px;
     height: 50px;
     padding: 0 26px;
     color: #fff;
+    font-size: fontz(text-m);
+    font-weight: 400;
     cursor: pointer;
-    background: linear-gradient(356deg, color(primary), color(secondary) );
+    background: linear-gradient(356deg, color(primary), color(secondary));
+    @include shadow();
 }
 .functionnality {
-    padding: 3rem 1.5rem 3rem 2.3rem;
+    padding: 3rem 1.3rem 3.3rem 2rem;
     h3 {
         margin-left: -0.8rem;
     }
+    .title {
+        padding-bottom: 1.2rem;
+    }
     button {
         position: relative;
+        border-radius: 19px;
+        padding: 0 2rem;
         width: 100%;
-        font-size: fontz(texte-sm);
+        font-size: fontz(text-m);
         font-weight: 500;
-        height: 80px;
-        margin: 1rem 0 ;
+        height: 70px;
+        margin: 0.85rem 0 ;
         color: #000;
         background: gray(2.5);
+        @include shadow(0.13);
         div {
-            @include flex-center();
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
         }
         span {
             @include flex-center();
             color: #fff;
             background-color: color(primary);
             border-radius: 50%;
-            height: 26px;
+            height: 24px;
             aspect-ratio: 1;
             position: absolute;
             left: -13px;
             top: 50%;
             transform: translate(0, -50%);
+            font-size: 14px;
+            font-weight: 400;
         }
         i {
             color: gray(55);
             padding-right: 20px;
         }
+        &:nth-of-type(1) {
+            p  {
+                padding-left: .4rem;
+            }
+        }
     }
 }
+
 .restaurants {
     background-color: gray(3);
-    padding: 3rem 1.5rem;
-    .card-container {
-        position: relative;
-        border-radius: 15px;
-        padding: 1rem 0;
-        height: 330px;
-        .new {
-            position: absolute;
-            background-color: color(tertiary);
-            color: darken(color(tertiary), 40);
-            font-weight: 500;
-            user-select: none;
-            padding: 0.5rem 1rem;
-            border-radius: 3px;
-            right: 15px;
-            top: 30px;
-        }
+    padding: 3.35rem 1.25rem 3rem 1.25rem;
+    font-size: fontz(text);
+}
+.card-container {
+    position: relative;
+    border-radius: 15px;
+    margin: 1rem 0 1.35rem 0;
+    height: 247px;
+    @include shadow();
+    a {
+        display: block;
+        position: absolute;
+        border-radius: inherit;
+        width: 100%;
+        height: calc(100% - 2rem);
+        z-index: 1;
+    }
+    .new {
+        position: absolute;
+        background-color: color(tertiary);
+        color: darken(color(tertiary), 40);
+        font-size: 14px;
+        font-weight: 500;
+        user-select: none;
+        padding: 0.4rem .75rem;
+        border-radius: 3px;
+        right: 12px;
+        top: 13px;
+    }
+    &:nth-of-type(2) {
         img {
-            object-fit: cover;
-            object-position: center;
-            width: 100%;
-            height: 70%;
-            border-radius: 15px 15px 0 0;
-
-        }
-        .card-info {
-            background-color: #fff;
-            height: 30%;
-            border-radius: 0 0 15px 15px;
-        }
-        i {
-            position: absolute;
-            right: 30px;
+        object-position: 50% 60%;
         }
     }
+    img {
+        object-fit: cover;
+        object-position: 50% 100%;
+        width: 100%;
+        height: 70%;
+        border-radius: 15px 15px 0 0;
+
+    }
+    .card-info {
+        background-color: #fff;
+        height: 30%;
+        border-radius: 0 0 15px 15px;
+        z-index: 2;
+    }
+    h3 {
+        padding: .9rem 0 0 .8rem;
+    }
+    p {
+        padding: 0.3rem 0 0 1rem;
+    }
+    button {
+        position: absolute;
+        background: transparent;
+        height: fit-content;
+        width: fit-content;
+        right: 25px;
+        bottom: 28px;
+        padding: 0;
+        z-index: 2;
+        box-shadow: none;
+        i {
+            color: #000;
+            font-size: 22px;
+        }
+    }
+    
 }
+
 footer {
     background-color: gray(75);
     color: #fff;
     padding: 0 1.7rem 3rem 1.7rem;
-    font-size: fontz(texte);
+    font-size: fontz(text);
     .logo-footer {
-        font-family: 'Shrikhand', cursive;
-        padding: 1.5rem 0;
+        padding: 0 0 .8rem 0;
+        transform: scale(.5) translate(-52%, 71%);
+    }
+    ul {
+        padding-top: .4rem;
     }
     li {
         padding: 0.3rem 0;
-        font-size: fontz(texte-sm);
+        font-size: fontz(texte-m);
     }
     i {
-        width: 25px;
+        width: 17px;
+        font-size: 11px;
     }
 }
